k8s/echo-deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: echo-deployment
  namespace: default

spec:
  replicas: 1

  selector:
    matchLabels:
      app: echo

  template:
    metadata:
      labels:
        app: echo

    spec:
      containers:
        - name: echo

          image: ealen/echo-server:latest

          ports:
            - containerPort: 80
