k8s/echo-service.yaml
apiVersion: v1
kind: Service

metadata:
  name: echo-service
  namespace: default

spec:
  type: ClusterIP

  selector:
    app: echo

  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
